--- a/index.html
+++ b/index.html
@@ -1,1 +1,86 @@
-<h1>PIDR</h1>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="css/Body.css">
+    <link rel="stylesheet" href="css/Links.css">
+    <link rel="stylesheet" href="css/Icons.css">
+    <link rel="stylesheet" href="css/Header.css">
+    <link rel="stylesheet" href="css/MainTags.css">
+    <title></title>
+  </head>
+  <body>
+    <div class="Header">
+      <div class="UpHeader">
+        <div class="LeftUpHeader">
+            <a class="LinkM" href="#">
+              <img class="IconM" src="images/m.png" alt="">
+            </a>
+        </div>
+        <div class="RightUpHeader">
+            <a class="LinkSI" href="#">Sign in</a>
+            <a class="LinkGS" href="#">Get started</a>
+        </div>
+      </div>
+      <hr>
+      <div class="BottomHeader">
+        <a href="#"><img class="IconCir" src="images/IconCir"></a>
+        <a class="GreyLink" href="#">WEB DEVELOPMENT</a>
+        <a class="GreyLink" href="#">DATA SCIENCE</a>
+        <a class="GreyLink" href="#">DESIGN</a>
+        <a class="GreyLink" href="#">BUSINESS</a>
+      </div>
+    </div>
+    <br>
+    <div class="MainBody">
+      <img class="MainBodyImg" src="images/2019.png">
+      <div class="MainArticle">
+        <div class="ArticleHeader">
+          Learn JavaScript from Top 50 Articles for the Past Year (v.2019)
+        </div>
+        <br>
+        <div class="ArticleUrls">
+          <div class="ArticleUrlsLeft">
+            <img class="IconCir2" src="images/IconCir" alt="">
+            <div class="ArticlesUrlsDateName">
+              <div class="ArticlesUrlsName">
+                <a class="ArticlesLinksName" href="#">MyBridge</a>
+                <a class="ArticlesLinksFollow" href="#">Follow</a>
+              </div>
+              <div class="ArticlesUrlsDate">
+                <a class="ArticlesLinksDate" href="#">Dec 29, 2018</a>
+                 · 8 min read
+              </div>
+            </div>
+          </div>
+          <a href="#">
+            <img class="Bookmark" src="images/bookmark.png" alt="">
+          </a>
+        </div>
+        <br>
+        <div class="ArticleMainPart">
+          <p class="ArticleParh">
+            Between Jan~Dec 2018, we’ve compared nearly 24,000 JavaScript
+            articles to pick the Top 50 that can improve
+            your web development skill
+            for 2019.
+          </p>
+          <br>
+          <p class="ArticleParh">
+            This is an extremely competitive list (50/24,000 or 0.21% chance),
+            and carefully picks the most useful JavaScript articles published
+            for the past year. <a class="TextLink" href="#">Mybridge AI</a>
+            evaluates the quality by considering popularity, engagement and
+            recency, and other human factors.
+          </p>
+          <br>
+          <p  class="ArticleParh">
+            Tutorials are divided into 17 relevant groups (see below).
+          </p>
+          <br>
+        </div>
+      </div>
+    </div>
+    <hr>
+  </body>
+</html>
