--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
         <br>
         <div class="ArticleUrls">
           <div class="ArticleUrlsLeft">
-            <img class="IconCir2" src="images/IconCir" alt="">
+            <a href="#">
+              <img class="IconCir2" src="images/IconCir" alt="">
+            </a>
             <div class="ArticlesUrlsDateName">
               <div class="ArticlesUrlsName">
                 <a class="ArticlesLinksName" href="#">MyBridge</a>
