--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/Icons.css">
     <link rel="stylesheet" href="css/Header.css">
     <link rel="stylesheet" href="css/MainTags.css">
-    <title></title>
+    <title>Learn JavaScript from Top 50 Articles for the Past Year (v.2019)</title>
   </head>
   <body>
     <div class="Header">
