--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <link rel="stylesheet" href="lab3/css/Body.css">
     <link rel="stylesheet" href="lab3/css/Head.css">
     <link rel="stylesheet" href="lab3/css/Links.css">
-    <script src="lab3/scrips/GettingData.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet"> 
     <title></title>
     <!--This site using:
@@ -15,7 +14,7 @@
   <body>
     <div class="Head">
       <h1 class="MainHeader">
-        CUzkovWether
+        CUzkovWeather
       </h1>
       <h1 class="MainHeader">
         <a href="https://www.donationalerts.com/r/crazyuzkov">Поддержка автора</a>
@@ -23,8 +22,13 @@
     </div>
     <br>
     <div class="Body">
-      <div class="BlockSevenDays"></div>
-    </div>
+      <div class="BlockDate">
+        <div class="BlockCurrentDay">
 
+        </div>
+        <div class="blockSevenDays"></div>
+      </div>
+    </div>
+    <script src="lab3/scrips/GettingData.js"></script>
   </body>
 </html>
