--- a/lab3/mobile/index1.html
+++ b/lab3/mobile/index1.html
@@ -2,9 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="lab3/css/Body.css">
-    <link rel="stylesheet" href="lab3/css/Head.css">
-    <link rel="stylesheet" href="lab3/css/Links.css">
+    <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0'/>
+    <link rel="stylesheet" href="/lab3/mobile/css/Body.css">
+    <link rel="stylesheet" href="/lab3/mobile/css/Head.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet"> 
     <title></title>
     <!--This site using:
@@ -16,20 +16,14 @@
       <h1 class="MainHeader">
         CUzkovWeather
       </h1>
-      <h1 class="MainHeader">
-        <a href="https://www.donationalerts.com/r/crazyuzkov">Поддержка автора</a>
-      </h1>
     </div>
     <br>
     <div class="Body">
       <div class="BlockDate">
-        <div class="BlockCurrentDay">
-
-        </div>
+        <div class="BlockCurrentDay"></div>
         <div class="blockSevenDays"></div>
       </div>
     </div>
-    <script src="/lab3/scrips/CheckMobile.js"></script>
-    <script src="lab3/scrips/GettingData.js"></script>
+    <script src="/lab3/scrips/GettingData.js"></script>
   </body>
 </html>
