--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="blockSevenDays"></div>
       </div>
     </div>
-    <script src="/lab3/scrips/CheckMobile.js"></script>
+    <script src="lab3/scrips/CheckMobile.js"></script>
     <script src="lab3/scrips/GettingData.js"></script>
   </body>
 </html>
