--- a/lab3/mobile/index1.html
+++ b/lab3/mobile/index1.html
@@ -24,6 +24,6 @@
         <div class="blockSevenDays"></div>
       </div>
     </div>
-    <script src="/lab3/scrips/GettingData.js"></script>
+    <script src="lab3/scrips/GettingData.js"></script>
   </body>
 </html>
