--- a/lab3/mobile/index1.html
+++ b/lab3/mobile/index1.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0'/>
-    <link rel="stylesheet" href="/lab3/mobile/css/Body.css">
-    <link rel="stylesheet" href="/lab3/mobile/css/Head.css">
+    <link rel="stylesheet" href="css/Body.css">
+    <link rel="stylesheet" href="css/Head.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet"> 
     <title></title>
     <!--This site using:
@@ -24,6 +24,6 @@
         <div class="blockSevenDays"></div>
       </div>
     </div>
-    <script src="lab3/scrips/GettingData.js"></script>
+    <script src="../scrips/GettingData.js"></script>
   </body>
 </html>
