--- a/lab3/mobile/index1.html
+++ b/lab3/mobile/index1.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/Body.css">
     <link rel="stylesheet" href="css/Head.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet"> 
-    <title></title>
+    <title>CUzkovWeather</title>
     <!--This site using:
         https://openweathermap.org/api/
       -->
