--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="lab3/css/Head.css">
     <link rel="stylesheet" href="lab3/css/Links.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet"> 
-    <title></title>
+    <title>CUzkovWeather</title>
     <!--This site using:
         https://openweathermap.org/api/
       -->
