--- a/lab3/index.html
+++ b/lab3/index.html
@@ -2,9 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="lab3/css/Body.css">
-    <link rel="stylesheet" href="lab3/css/Head.css">
-    <link rel="stylesheet" href="lab3/css/Links.css">
+    <link rel="stylesheet" href="css/Body.css">
+    <link rel="stylesheet" href="css/Head.css">
+    <link rel="stylesheet" href="css/Links.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet"> 
     <title>CUzkovWeather</title>
     <!--This site using:
@@ -29,7 +29,7 @@
         <div class="blockSevenDays"></div>
       </div>
     </div>
-    <script src="lab3/scrips/CheckMobile.js"></script>
-    <script src="lab3/scrips/GettingData.js"></script>
+    <script src="scrips/CheckMobile.js"></script>
+    <script src="scrips/GettingData.js"></script>
   </body>
 </html>
